tests-integration/fixtures/checking2/256_record_field_polymorphic/Main.snap
---
source: tests-integration/tests/checking2/generated.rs
assertion_line: 28
expression: report
---
Terms
Left :: forall (@a :: Type) (@b :: Type). (a :: Type) -> Either (a :: Type) (b :: Type)
Right :: forall (@a :: Type) (@b :: Type). (b :: Type) -> Either (a :: Type) (b :: Type)
FFIUtil ::
  { isLeft :: forall (a :: Type) (b :: Type). Either (a :: Type) (b :: Type) -> Boolean
  , isRight :: forall (a :: Type) (b :: Type). Either (a :: Type) (b :: Type) -> Boolean
  , left :: forall (a :: Type) (b :: Type). (a :: Type) -> Either (a :: Type) (b :: Type)
  , right :: forall (a :: Type) (b :: Type). (b :: Type) -> Either (a :: Type) (b :: Type)
  } ->
  FFIUtil
isLeft :: forall (a :: Type) (b :: Type). Either (a :: Type) (b :: Type) -> Boolean
isRight :: forall (a :: Type) (b :: Type). Either (a :: Type) (b :: Type) -> Boolean
test :: FFIUtil

Types
Either :: Type -> Type -> Type
FFIUtil :: Type

Roles
Either = [Representational, Representational]
FFIUtil = []

Diagnostics
error[CannotUnify]: Cannot unify '?28' with '(t19 :: Type)'
  --> 22:3..26:4
   |
22 |   { left: Left
   |   ^~~~~~~~~~~~
error[CannotUnify]: Cannot unify 'Either (t18 :: Type) (t19 :: Type)' with 'Either (t18 :: Type) ?28'
  --> 22:3..26:4
   |
22 |   { left: Left
   |   ^~~~~~~~~~~~
error[CannotUnify]: Cannot unify '?30' with '(t21 :: Type)'
  --> 22:3..26:4
   |
22 |   { left: Left
   |   ^~~~~~~~~~~~
error[CannotUnify]: Cannot unify 'Either (t20 :: Type) (t21 :: Type)' with 'Either (t20 :: Type) ?30'
  --> 22:3..26:4
   |
22 |   { left: Left
   |   ^~~~~~~~~~~~
